# Lotus_Launcher

./: .gitignore  boilerplates.config.js  package.json  postcss.config.js  tsconfig.json  webpack.config.js
@types/: global.d.ts
public/: index.html
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/src/: main.rs
src/renderer/: App.tsx  index.scss  index.tsx
src/renderer/assets/styles/: color.ts
src/renderer/services/: dbLauncher.ts
src/renderer/services/zustand/: apiServerStore.ts  dbServerStore.ts  servicesStore.ts
src/renderer/ui/components/buttons/dark_add_button/: DarkAddButton.tsx
src/renderer/ui/components/buttons/iconic_button/: IconicButton.stories.tsx
src/renderer/ui/components/buttons/text_button/: TextButton.tsx
src/renderer/ui/components/ip_display/: IpDisplay.stories.tsx  IpDisplay.tsx  index.ts
src/renderer/ui/components/ip_display/style/: index.scss
src/renderer/ui/components/loading_spinner/: LoadingSpinner.tsx
src/renderer/ui/components/loading_spinner/style/: index.scss
src/renderer/ui/components/main_button/: MainButton.stories.tsx  MainButton.tsx  index.ts
src/renderer/ui/components/main_button/style/: index.scss
src/renderer/ui/components/main_logo/: MainLogo.stories.tsx  MainLogo.tsx
src/renderer/ui/components/services_status/: ServicesStatus.stories.tsx  ServicesStatus.tsx  index.ts
src/renderer/ui/components/stop_watch/: StopWatch.stories.tsx  StopWatch.tsx  index.ts
src/renderer/ui/containers/app_container/: AppContainer.stories.tsx  AppContainer.tsx
src/renderer/utils/constants/: db.ts
(+8 files in other folders)
