[package]
name = "clinicord-server"
version = "1.0.0-alpha.1"
description = "Clinicord Server is a utiliy that is used to start a Clinicord server."
authors = ["dzbrackets"]
license = "EULA"
repository = "https://github.com/Danzo7/doctorIO"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0.152", features = ["derive"] }
tauri = { version = "1.2.4", features = ["dialog-all", "path-all", "shell-execute", "shell-open", "shell-sidecar", "system-tray"] }
sysinfo = "0.27.7"
local-ip-address = "0.5.1"
[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
